# C-Box

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
docs/: PRD.md
openspec/changes/mvp-environment-engine/: design.md  proposal.md  tasks.md
openspec/changes/mvp-environment-engine/specs/desktop-shell/: spec.md
openspec/changes/mvp-environment-engine/specs/environment-detector/: spec.md
openspec/changes/mvp-environment-engine/specs/orchestrator/: spec.md
openspec/changes/mvp-environment-engine/specs/pack-installer/: spec.md
openspec/changes/mvp-environment-engine/specs/pack-loader/: spec.md
openspec/changes/mvp-environment-engine/specs/pack-state-machine/: spec.md
packs/claude-code/: manifest.toml
packs/git/: manifest.toml
packs/nodejs/: manifest.toml
packs/npm/: manifest.toml
packs/python/: manifest.toml
packs/uv/: manifest.toml
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lock_file.rs  main.rs
src-tauri/src/detector/: mod.rs
src-tauri/src/orchestrator/: mod.rs
src-tauri/src/pack/: installer.rs  loader.rs  mod.rs  state.rs  types.rs
src-tauri/src/platform/: mod.rs
src/components/: PackCard.vue
src/composables/: usePackEvents.ts
src/locales/: zh-CN.json
src/stores/: pack.ts
src/styles/: global.css
src/types/: pack.ts
src/views/: HomeView.vue
